force-app/main/default/objects/ReviewRequiredTriggerRules__mdt/ReviewRequiredTriggerRules__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to store the configuration for Review Required screens and trigger rules for Report a Change and Intake flow.</description>
    <label>Review Required Trigger Rules</label>
    <pluralLabel>Review Required Trigger Rules</pluralLabel>
</CustomObject>