force-app/main/default/objects/ReviewRequiredTriggerRules__mdt/fields/IsRuleApex__c.field-meta.xml
<CustomField>
    <fullName>IsRuleApex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Flag is used to determine whether rule has to be evaluated from apex or js</description>
    <label>Is Rule Apex</label>
    <type>Checkbox</type>
</CustomField>