force-app/main/default/objects/ReviewRequiredTriggerRules__mdt/fields/ReviewRequiredScreens__c.field-meta.xml
<CustomField>
    <fullName>ReviewRequiredScreens__c</fullName>
    <label>Review Required Screens</label>
    <referenceTo>NavFlowPageConfig__mdt</referenceTo>
    <relationshipLabel>Review Required Trigger Rules</relationshipLabel>
    <relationshipName>Review_Required_Trigger_Rules</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>