force-app/main/default/objects/ReviewRequiredTriggerRules__mdt/listViews/Filter.listView-meta.xml
<ListView>
    <fullName>Filter</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>RuleName__c</field>
        
            <operation>contains</operation>
        
            <value>contact</value>
        
        </filters>
    <label>Filter</label>
    <language>en_US</language>
</ListView>