force-app/main/default/objects/ReviewRequiredTriggerRules__mdt/listViews/Rules.listView-meta.xml
<ListView>
    <fullName>Rules</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>RuleName__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsRuleApex__c</columns>
    <columns>Screen__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rules</label>
    <language>en_US</language>
</ListView>